--- a/index.qmd
+++ b/index.qmd
@@ -161,6 +161,67 @@ plot_grid <- gridExtra::grid.arrange(
 ggsave("monaco_gp_winners_2019_2023.png", plot = plot_grid, width = 12, height = 10, dpi = 300)
 
 ```
+## Question 2
+
+2. How can a driver's performance on their fastest lap be analyzed using speed and throttle data?
+
+**Introduction**
+
+This analysis focuses on leveraging telemetry data to evaluate the performance of a Formula 1 driver during their fastest lap. By visualizing speed and throttle data over the course of a lap, we can uncover nuanced insights into the driver’s approach to track sections, their use of throttle, and overall efficiency.
+
+**Approach**
+
+## Data Collection:
+
+The telemetry data for Max Verstappen (VER) during the 2023 season, Round 1, was retrieved using the f1dataR package.
+The fastest lap for the driver was identified using the load_laps function, and its corresponding telemetry was extracted with load_driver_telemetry.
+Data Processing:
+
+The fastest lap was filtered by finding the lap with the minimum time_sec value.
+Telemetry data for the specific lap was processed to include speed, throttle, and distance metrics.
+Visualization:
+
+A line plot was created to visualize speed across the lap distance, with throttle usage represented as a gradient. This allowed us to see the relationship between acceleration, deceleration, and speed consistency across different track sections.
+
+```{r}
+library(f1dataR)
+library(ggplot2)
+library(dplyr)
+
+year <- 2023
+round <- 1
+driver_code <- "VER" # Change as needed
+
+laps <- load_laps(year, round)
+
+driver_laps <- laps %>% filter(driver_code == driver_code)
+
+fastest_lap <- driver_laps %>% filter(time_sec == min(time_sec, na.rm = TRUE))
+
+fastest_lap_number <- fastest_lap$lap[1]
+
+telemetry <- load_driver_telemetry(
+  season = year,
+  round = round,
+  session = "R",
+  driver = driver_code,
+  lap = fastest_lap_number
+)
+
+# Visualization: Speed vs Distance with Throttle Usage
+ggplot(telemetry, aes(x = distance, y = speed)) +
+  geom_line(color = "blue", size = 1) +
+  geom_point(aes(color = throttle), size = 0.8) +
+  scale_color_gradient(low = "yellow", high = "red", name = "Throttle (%)") +
+  labs(
+    title = paste("Driver Performance Analysis:", driver_code),
+    subtitle = paste("Fastest Lap - Round", round, year),
+    x = "Distance (m)",
+    y = "Speed (km/h)"
+  ) +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 14))
+```
 
 
 ## Question 4: How does pitstop time affect the race outcome:
